[project]
name = "adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.18.0",
    "llama-index>=0.14.22",
    "llama-index-llms-azure-openai>=0.5.5",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.20",
    "tavily>=1.1.0",
]
